# arcgisgeocode

./: .Rbuildignore  .gitattributes  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  config.status  cran-comments.md  index.html  index.md  justfile  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: arcgeocode-package.R  batch_geocode.R  core-batch-geocode.R  core-find-candidates.R  core-reverse-geocode.R  core-suggest.R  data.R  doc-data.R  extendr-wrappers.R  find-candidates.R  geocoder-obj.R  import-standalone-obj-type.R  import-standalone-types-check.R  list-geocoders.R  reverse-geocode.R  suggest.R  sysdata.rda  utils-camel-case.R  utils-checks.R  utils-crs.R  utils-geocoder-obj.R  utils-iso-3166.R
data/: esri_wkids.rda  world_geocoder.rda
data-raw/: default_geocoder.R  esri-spatial-ref.R
dev/: arcgisgeocode-yelp-timing.csv  batch-geocode.R  bench-marks.R  calcite-doc.R  custom-locator-res.R  geocode-csv.R  json.R  make-errors.R  shiny-app.R  shiny-reverse-geocode.R  suggest-find-candidates.R  yelp-timing.csv
man/: arcgeocode-package.Rd  arcgisgeocode-package.Rd  esri_wkids.Rd  find_address_candidates.Rd  geocode_addresses.Rd  geocode_server.Rd  iso_3166_codes.Rd  list_geocoders.Rd  reverse_geocode.Rd  storage.Rd  suggest_places.Rd  (+1 more)
src/: Makevars  (+6 more)
src/rust/: Cargo.toml  vendor-config.toml
src/rust/src/: batch_geocode.rs  find_candidates.rs  iso3166.rs  lib.rs  main.rs  old-main.rs  parse_custom_attrs.rs  reverse.rs  suggest.rs
(+38 files in other folders)
