[package]
name = 'arcgisgeocode'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'arcgisgeocode'

[dependencies]
extendr-api = { version = "0.7.0", features = ["serde"] }
rust_iso3166 = "0.1.12"
serde = "*"
serde_esri = { git = "https://github.com/josiahparry/serde_esri" }
serde_json = "*"
serde_with = { version = "*" }

[profile.release]
lto = true
codegen-units = 1
